Fix issues with horizontal overflow on mobile

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -871,6 +871,7 @@ pre {
 pre, code {
   font-family: 'Consolas', 'Menlo', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
   font-size: 0.9em;
+  overflow-wrap: break-word;
 }
 
 code {
